--- a/index.html
+++ b/index.html
@@ -65,9 +65,43 @@ organizes the information.
   <h3>CSS</h3>
   <ul>
     <li>Inline CSS</li>
-    <li>Internal CSS</li>
+    <pre>CSS can be added to HTML documents in 3 ways:
+Inline styles are defined within the "style" attribute of the relevant element.
+an example of a very nicely STYLED web- site :
+in our site :
+ < body style="background-color: pink;"> - to change the entire background of
+   our site.
+    for custom- colours : < body style="background-color: #FCD8D4;">
+one of the most professional sources for picking up colours are available:</pre>
+<li>Internal CSS</li>
+<pre>Internal CSS :
+  An internal style sheet may be used if one single HTML page has a
+  unique style.
+  The internal style is defined inside the < style > element, inside
+  the head section.
+  There are some Chrome's Plugin to implement CSS-"Pesticide".
+  This is a example of using internal css
+< head >
+< style >
+body {
+background-color: #FCD8D4;
+}
+img {
+height: 20px;
+}
+< /style >
+< /head ></pre>
     <li>External CSS</li>
+ <pre>An external style sheet is used to define the style for many HTML
+  pages. To use an external style sheet, add a link to it in the < head >
+  section of each HTML page, after creating a file "styles.css"
+  (without the ""). It is better for us if we create the file within a
+  folder- "css"within your project- space.
+</pre>
   </ul>
+
+<h3>JavaScript</h3>
+
 
   </body>
 </html>
