--- a/index.html
+++ b/index.html
@@ -101,6 +101,31 @@ height: 20px;
   </ul>
 
 <h3>JavaScript</h3>
+<pre>
+  JavaScript is a scripting or programming language that allows you to
+  implement complex features on web pages — every time a web page does more
+  than just sit there and display static information for you to look at —
+  displaying timely content updates, interactive maps, animated 2D/3D graphics,
+  scrolling video jukeboxes, etc.
+  There are three types for using Javascript.</pre>
+  <ul>
+    <li>Inline JavaScript</li>
+    <pre>< button onclick="createParagraph()">Click me!< /button>
+      <button onclick="createParagraph()">Click me!</button></pre>
+    <li>External JavaScript</li>
+    <pre>
+      1. Create the .js file in same directory.
+      2. Put the code in .js file.
+      3. Link in your html file as shown below
+      < script src="script.js" defer>< /script>
+    </pre>
+    <li>Internal JavaScript</li>
+    <pre>< script>
+
+  // JavaScript goes here
+
+< /script></pre>
+  </ul>
 
 
   </body>
